Refactoring MDS to use dtos instead of domain objects